force-app/main/default/objects/Grants__c/Grants__c.object-meta.xml
<CustomObject>
    <label>Grants</label>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Grant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>