force-app/main/default/objects/Grants__c/fields/Alleviation_of_the_disease_burden__c.field-meta.xml
<CustomField>
    <fullName>Alleviation_of_the_disease_burden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alleviation of the disease burden</label>
    <type>Checkbox</type>
</CustomField>