force-app/main/default/objects/Grants__c/fields/Alleviation_of_your_country_s_disease__c.field-meta.xml
<CustomField>
    <fullName>Alleviation_of_your_country_s_disease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alleviation of your country&apos;s disease</label>
    <type>Checkbox</type>
</CustomField>