force-app/main/default/objects/Grants__c/fields/Applicant_PDF__c.field-meta.xml
<CustomField>
    <fullName>Applicant_PDF__c</fullName>
    <formula>IF( NOT(ISBLANK( Applicant_PDF_URL__c)) , HYPERLINK( Applicant_PDF_URL__c, &quot;Click Here&quot;, &quot;_blank&quot;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant PDF</label>
    <type>Text</type>
</CustomField>