force-app/main/default/objects/Grants__c/fields/Applicant_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Applicant_PDF_URL__c</fullName>
    <label>Applicant PDF URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>