force-app/main/default/objects/Grants__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <label>Background</label>
    <length>80</length>
    <type>Text</type>
</CustomField>