force-app/main/default/objects/Grants__c/fields/By_Whom_and_When_the_Project_was_Review__c.field-meta.xml
<CustomField>
    <fullName>By_Whom_and_When_the_Project_was_Review__c</fullName>
    <inlineHelpText>Please state: By whom and when the ethics of the project was/will be reviewed? Also specify any other regulatory approvals that have been/will be obtained. (Limit 200 words)</inlineHelpText>
    <label>By Whom and When the Project was Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>