force-app/main/default/objects/Grants__c/fields/Conflict_of_interests__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_interests__c</fullName>
    <label>Conflict of interests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>