force-app/main/default/objects/Grants__c/fields/Contribution_to_the_host_institution__c.field-meta.xml
<CustomField>
    <fullName>Contribution_to_the_host_institution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contribution to the host institution</label>
    <type>Checkbox</type>
</CustomField>