force-app/main/default/objects/Grants__c/fields/Data_management_and_sharing__c.field-meta.xml
<CustomField>
    <fullName>Data_management_and_sharing__c</fullName>
    <label>Data management and sharing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>