force-app/main/default/objects/Grants__c/fields/Describe_How_to_Execute_this_Project__c.field-meta.xml
<CustomField>
    <fullName>Describe_How_to_Execute_this_Project__c</fullName>
    <inlineHelpText>Q2.	Please describe why a team approach is necessary to execute this project. Define roles of all investigators and how the project will be managed and led. (Limit 500 words).</inlineHelpText>
    <label>Describe How to Execute this Project</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>