force-app/main/default/objects/Grants__c/fields/Describe_Why_Team_Approach_Is_necessary__c.field-meta.xml
<CustomField>
    <fullName>Describe_Why_Team_Approach_Is_necessary__c</fullName>
    <label>Describe Why Team Approach Is necessary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>