force-app/main/default/objects/Grants__c/fields/Details_of_Stem_Cell_Experiments__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Stem_Cell_Experiments__c</fullName>
    <inlineHelpText>Provide details of source(s) of stem cells and nature of experiments. (Limit 200 words)</inlineHelpText>
    <label>Details of Stem Cell &amp; Experiments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>