force-app/main/default/objects/Grants__c/fields/Details_of_Study_design_for_Experiments__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Study_design_for_Experiments__c</fullName>
    <label>Details of Study design for Experiments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>