force-app/main/default/objects/Grants__c/fields/Details_of_Technology_materials__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Technology_materials__c</fullName>
    <inlineHelpText>inventions that you may use for this project that are subject to any patents or other form of intellectual property protection, if any.</inlineHelpText>
    <label>Details of Technology &amp; materials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>