force-app/main/default/objects/Grants__c/fields/Details_of_the_project__c.field-meta.xml
<CustomField>
    <fullName>Details_of_the_project__c</fullName>
    <label>Details of the project</label>
    <type>TextArea</type>
</CustomField>