force-app/main/default/objects/Grants__c/fields/Details_Procedures_of_Animals__c.field-meta.xml
<CustomField>
    <fullName>Details_Procedures_of_Animals__c</fullName>
    <inlineHelpText>Please provide details of any procedures on animals of substantial or moderate severity (Limit 200 words)</inlineHelpText>
    <label>Details &amp; Procedures of Animals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>