force-app/main/default/objects/Grants__c/fields/Duration_of_the_grant_in_months__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_the_grant_in_months__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Duration of the grant (in months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>