force-app/main/default/objects/Grants__c/fields/Existing_research_environment__c.field-meta.xml
<CustomField>
    <fullName>Existing_research_environment__c</fullName>
    <inlineHelpText>Existing research environment at the host institution</inlineHelpText>
    <label>Existing research environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>