force-app/main/default/objects/Grants__c/fields/Expected_outcomes__c.field-meta.xml
<CustomField>
    <fullName>Expected_outcomes__c</fullName>
    <label>Expected outcomes</label>
    <type>TextArea</type>
</CustomField>