force-app/main/default/objects/Grants__c/fields/Experiments_with_human_stem_cells__c.field-meta.xml
<CustomField>
    <fullName>Experiments_with_human_stem_cells__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does your proposal include working with human participants, experiments with human stem cells, biological samples and/or personal data relating to living or dead persons? If yes, please tick as appropriate</inlineHelpText>
    <label>Experiments with human stem cells</label>
    <type>Checkbox</type>
</CustomField>