force-app/main/default/objects/Grants__c/fields/following_species_will_be_used__c.field-meta.xml
<CustomField>
    <fullName>following_species_will_be_used__c</fullName>
    <inlineHelpText>Primate, Cat, Dog, Equidae, Pig, Genetically Altered Animals? If yes, the office may contact you with additional questions.</inlineHelpText>
    <label>following species will be used?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>