force-app/main/default/objects/Grants__c/fields/Form_State__c.field-meta.xml
<CustomField>
    <fullName>Form_State__c</fullName>
    <defaultValue>&apos;step1&apos;</defaultValue>
    <label>Form State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>