force-app/main/default/objects/Grants__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <formula>IF(RecordType.Name == &apos;Team Science Grants (TSG)&apos;, &apos;TSG&apos;, &apos;CRC&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Type</label>
    <type>Text</type>
</CustomField>