force-app/main/default/objects/Grants__c/fields/Generated_pdf_URL__c.field-meta.xml
<CustomField>
    <fullName>Generated_pdf_URL__c</fullName>
    <label>Generated pdf URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>