force-app/main/default/objects/Grants__c/fields/Have_any_Research_Sponsorship_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Have_any_Research_Sponsorship_Agreements__c</fullName>
    <inlineHelpText>directorships of, companies or other organisations that have any research sponsorship agreements, might have an interest in the results of the proposed research?</inlineHelpText>
    <label>Have any Research Sponsorship Agreements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>