force-app/main/default/objects/Grants__c/fields/Human_participants__c.field-meta.xml
<CustomField>
    <fullName>Human_participants__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does your proposal include working with human participants, experiments with human stem cells, biological samples and/or personal data relating to living or dead persons? If yes, please tick as appropriate:</inlineHelpText>
    <label>Human participants</label>
    <type>Checkbox</type>
</CustomField>