force-app/main/default/objects/Grants__c/fields/If_applicable_let_us_know_details__c.field-meta.xml
<CustomField>
    <fullName>If_applicable_let_us_know_details__c</fullName>
    <inlineHelpText>If applicable, let us know details of 
(i) Technology, materials, or other inventions that you may use for this project that are subject to any patents or other form of intellectual property protection, if any.
(ii) Agreements with commercial, academi</inlineHelpText>
    <label>If applicable, let us know details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>