force-app/main/default/objects/Grants__c/fields/If_your_project_involves_Experiments__c.field-meta.xml
<CustomField>
    <fullName>If_your_project_involves_Experiments__c</fullName>
    <inlineHelpText>If your project involves Experiments with human stem cells, respond to the following questions: 
Does the institution where the work is to be carried out have approval from India’s National Apex Committee for Stem Cell Research and Therapy (NAC-SCRT)?</inlineHelpText>
    <label>If your project involves Experiments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>