force-app/main/default/objects/Grants__c/fields/If_your_project_requires_access_to__c.field-meta.xml
<CustomField>
    <fullName>If_your_project_requires_access_to__c</fullName>
    <inlineHelpText>If your project requires access to patients under treatment at a hospital/clinical facility other than your host institution, provide name of the clinician(s) along with the details of the hospital or clinical facility. A letter confirming this access</inlineHelpText>
    <label>If your project requires access to</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>