force-app/main/default/objects/Grants__c/fields/India_Alliance_strongly_encourages__c.field-meta.xml
<CustomField>
    <fullName>India_Alliance_strongly_encourages__c</fullName>
    <inlineHelpText>India Alliance strongly encourages public dissemination of its funded research. Please share plans for engaging with the general public about your work. (Limit 300 words)</inlineHelpText>
    <label>India Alliance strongly encourages</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>