force-app/main/default/objects/Grants__c/fields/Institute__c.field-meta.xml
<CustomField>
    <fullName>Institute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institute</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grants (Institute)</relationshipLabel>
    <relationshipName>Grants1</relationshipName>
    <type>Lookup</type>
</CustomField>