force-app/main/default/objects/Grants__c/fields/Institution_Justification__c.field-meta.xml
<CustomField>
    <fullName>Institution_Justification__c</fullName>
    <label>Institution Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>