force-app/main/default/objects/Grants__c/fields/Institution_Undertaking_Document__c.field-meta.xml
<CustomField>
    <fullName>Institution_Undertaking_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution Undertaking Document</label>
    <referenceTo>Other_Document__c</referenceTo>
    <relationshipLabel>Grants</relationshipLabel>
    <relationshipName>Grants</relationshipName>
    <type>Lookup</type>
</CustomField>