force-app/main/default/objects/Grants__c/fields/Institutional_Committee_for_Stem_Cell__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Committee_for_Stem_Cell__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(Will this work require approval from?)[Institutional Committee for Stem Cell Research (IC-SCR)]</inlineHelpText>
    <label>Institutional Committee for Stem Cell</label>
    <type>Checkbox</type>
</CustomField>