force-app/main/default/objects/Grants__c/fields/Institutional_Ethics_Committee_IEC__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Ethics_Committee_IEC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will this work require approval from?[Institutional Ethics Committee (IEC)]</inlineHelpText>
    <label>Institutional Ethics Committee (IEC)</label>
    <type>Checkbox</type>
</CustomField>