force-app/main/default/objects/Grants__c/fields/Institutional_Undertakings_Description__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Undertakings_Description__c</fullName>
    <label>Institutional Undertakings Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>