force-app/main/default/objects/Grants__c/fields/Investigators_CV_must_have_CVs_in_the__c.field-meta.xml
<CustomField>
    <fullName>Investigators_CV_must_have_CVs_in_the__c</fullName>
    <inlineHelpText>Investigators CV (must have CVs in the prescribed format from all PIs, co-PIs, programme head, coordinators; arranged in the mentioned order with clear annotation)</inlineHelpText>
    <label>Investigators CV (must have CVs in the )</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>