force-app/main/default/objects/Grants__c/fields/Is_Open_Application__c.field-meta.xml
<CustomField>
    <fullName>Is_Open_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We are using this field for open application to specific applicant</description>
    <label>Is Open Application</label>
    <type>Checkbox</type>
</CustomField>