force-app/main/default/objects/Grants__c/fields/IU_Documents__c.field-meta.xml
<CustomField>
    <fullName>IU_Documents__c</fullName>
    <label>IU Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>