force-app/main/default/objects/Grants__c/fields/Lay_summary__c.field-meta.xml
<CustomField>
    <fullName>Lay_summary__c</fullName>
    <label>Lay summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>