force-app/main/default/objects/Grants__c/fields/Lead_Principal_Investigator_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Principal_Investigator_Full_Name__c</fullName>
    <formula>TEXT(Title__c) + Lead_Principal_Investigator_First_Name__c  +  Lead_Principal_Investigator_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Principal Investigator Full Name</label>
    <type>Text</type>
</CustomField>