force-app/main/default/objects/Grants__c/fields/Lead_Principal_Investigator_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Principal_Investigator_Last_Name__c</fullName>
    <label>Lead Principal Investigator Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>