force-app/main/default/objects/Grants__c/fields/LP1_Institution__c.field-meta.xml
<CustomField>
    <fullName>LP1_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead Principal Investigator [LPI]</inlineHelpText>
    <label>LP1 Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grants</relationshipLabel>
    <relationshipName>Grants</relationshipName>
    <type>Lookup</type>
</CustomField>