force-app/main/default/objects/Grants__c/fields/LPI_Discipline_expertise__c.field-meta.xml
<CustomField>
    <fullName>LPI_Discipline_expertise__c</fullName>
    <label>LPI Discipline/expertise</label>
    <length>80</length>
    <type>Text</type>
</CustomField>