force-app/main/default/objects/Grants__c/fields/Milestones_and_sustainability_plan__c.field-meta.xml
<CustomField>
    <fullName>Milestones_and_sustainability_plan__c</fullName>
    <inlineHelpText>Milestones (refer to the scheme guidelines) and sustainability plan</inlineHelpText>
    <label>Milestones and sustainability plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>