force-app/main/default/objects/Grants__c/fields/National_Apex_Committee_for_Stem_Cell_Re__c.field-meta.xml
<CustomField>
    <fullName>National_Apex_Committee_for_Stem_Cell_Re__c</fullName>
    <defaultValue>false</defaultValue>
    <description>National Apex Committee for Stem Cell Research and Therapy (NAC-SCRT)</description>
    <inlineHelpText>National Apex Committee for Stem Cell Research and Therapy (NAC-SCRT)</inlineHelpText>
    <label>National Apex Committee for Stem Cell Re</label>
    <type>Checkbox</type>
</CustomField>