force-app/main/default/objects/Grants__c/fields/PDF_Link__c.field-meta.xml
<CustomField>
    <fullName>PDF_Link__c</fullName>
    <formula>IF(  NOT(ISBLANK( Generated_pdf_URL__c ))  , HYPERLINK( Generated_pdf_URL__c , &quot;Click Here&quot;, &quot;_blank&quot;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Link</label>
    <type>Text</type>
</CustomField>