force-app/main/default/objects/Grants__c/fields/Personal_data__c.field-meta.xml
<CustomField>
    <fullName>Personal_data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does your proposal include working with human participants, experiments with human stem cells, biological samples and/or personal data relating to living or dead persons? If yes, please tick as appropriate</inlineHelpText>
    <label>Personal data</label>
    <type>Checkbox</type>
</CustomField>