force-app/main/default/objects/Grants__c/fields/PI_Documents__c.field-meta.xml
<CustomField>
    <fullName>PI_Documents__c</fullName>
    <label>PI Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>