force-app/main/default/objects/Grants__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <formula>TEXT(LP1_Institution__r.Pincode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pincode</label>
    <type>Text</type>
</CustomField>