force-app/main/default/objects/Grants__c/fields/plan_to_work_on_animal_stem_cells__c.field-meta.xml
<CustomField>
    <fullName>plan_to_work_on_animal_stem_cells__c</fullName>
    <inlineHelpText>please provide details of source of stem cells and nature of experiments. The institution where the work is to be carried out should have the IC-SCR or IAEC with required expertise to review the stem cell research in place</inlineHelpText>
    <label>plan to work on animal stem cells</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>