force-app/main/default/objects/Grants__c/fields/Please_confirm_that_you_have_conside__c.field-meta.xml
<CustomField>
    <fullName>Please_confirm_that_you_have_conside__c</fullName>
    <inlineHelpText>Please confirm that you have considered whether your proposed research or its outcomes pose risk of being misused for harmful purposes. If you have identified potential “non-hypothetical” risks, please describe briefly the steps that you and your inst</inlineHelpText>
    <label>Please confirm that you have conside</label>
    <length>255</length>
    <type>Text</type>
</CustomField>