force-app/main/default/objects/Grants__c/fields/Please_provide_details_of_any_proce__c.field-meta.xml
<CustomField>
    <fullName>Please_provide_details_of_any_proce__c</fullName>
    <inlineHelpText>Please provide details of any procedures on animals of substantial or moderate severity (Limit 200 words)</inlineHelpText>
    <label>Details of Animals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>