force-app/main/default/objects/Grants__c/fields/Please_state_By_whom_and_when_the__c.field-meta.xml
<CustomField>
    <fullName>Please_state_By_whom_and_when_the__c</fullName>
    <inlineHelpText>Please state: By whom and when the ethics of the project was/will be reviewed? Also specify any other regulatory approvals that have been/will be obtained. (Limit 200 words)</inlineHelpText>
    <label>Please state: By whom and when the</label>
    <length>255</length>
    <type>Text</type>
</CustomField>