force-app/main/default/objects/Grants__c/fields/Principal_Investigator_Documents__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator_Documents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Investigator Documents</label>
    <referenceTo>Other_Document__c</referenceTo>
    <relationshipLabel>Grants (Principal Investigator Documents)</relationshipLabel>
    <relationshipName>Grants1</relationshipName>
    <type>Lookup</type>
</CustomField>