force-app/main/default/objects/Grants__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <label>Programme</label>
    <type>TextArea</type>
</CustomField>