force-app/main/default/objects/Grants__c/fields/Project_Requires_to_patients_Treatments__c.field-meta.xml
<CustomField>
    <fullName>Project_Requires_to_patients_Treatments__c</fullName>
    <inlineHelpText>If your project requires access to patients under treatment at a hospital/clinical facility, provide name of the clinician(s) along with the details of the hospital or clinical facility</inlineHelpText>
    <label>Project Requires to patients Treatments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>