force-app/main/default/objects/Grants__c/fields/Project_summary__c.field-meta.xml
<CustomField>
    <fullName>Project_summary__c</fullName>
    <inlineHelpText>Please provide a summary of the proposed project, including key goals, for an expert audience (Limit 200 words). Kindly be aware that India Alliance publishes the synopsis of the awarded grant on its own and on third party websites.</inlineHelpText>
    <label>Project summary</label>
    <type>TextArea</type>
</CustomField>