force-app/main/default/objects/Grants__c/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <label>Project Title</label>
    <length>220</length>
    <type>Text</type>
</CustomField>