force-app/main/default/objects/Grants__c/fields/Proposal_Statements__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Statements__c</fullName>
    <inlineHelpText>No more than 5,000 words should be used to describe the proposal, excluding graphs, figures, references etc.</inlineHelpText>
    <label>Proposal Statements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>