force-app/main/default/objects/Grants__c/fields/Proposed_Clinical_Public_Health_Research__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Clinical_Public_Health_Research__c</fullName>
    <inlineHelpText>Proposed Clinical/Public Health Research Centre
In response to “Details of project”: arrangement is 5000-word write-up, figures, and tables, supporting data, timeline, references in prescribed format.</inlineHelpText>
    <label>Proposed Clinical/Public Health Research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>