force-app/main/default/objects/Grants__c/fields/Proposed_Research_or_Outcomes_Pose_Risk__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Research_or_Outcomes_Pose_Risk__c</fullName>
    <inlineHelpText>If you have identified potential “non-hypothetical” risks, please describe briefly the steps that you and your institution will take to manage them (Limit 250 words).</inlineHelpText>
    <label>Proposed Research or Outcomes Pose Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>