force-app/main/default/objects/Grants__c/fields/Provide_details_of_source_s__c.field-meta.xml
<CustomField>
    <fullName>Provide_details_of_source_s__c</fullName>
    <inlineHelpText>Provide details of source(s) of stem cells and nature of experiments. (Limit 200 words)</inlineHelpText>
    <label>Provide details of source(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>