force-app/main/default/objects/Grants__c/fields/Public_Dissemination_of_Funded_Research__c.field-meta.xml
<CustomField>
    <fullName>Public_Dissemination_of_Funded_Research__c</fullName>
    <inlineHelpText>India Alliance strongly encourages public dissemination of its funded research. Please share plans for engaging with the general public about your work. (Limit 300 words)</inlineHelpText>
    <label>Public Dissemination of  Funded Research</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>