force-app/main/default/objects/Grants__c/fields/Public_engagement_plan__c.field-meta.xml
<CustomField>
    <fullName>Public_engagement_plan__c</fullName>
    <label>Public engagement plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>