force-app/main/default/objects/Grants__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Reference</label>
    <type>AutoNumber</type>
</CustomField>