force-app/main/default/objects/Grants__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <formula>IF(RecordType.DeveloperName =&apos;CRC&apos;, &apos;IA&apos; + &apos;/&apos; + &apos;CRC&apos; + &apos;/&apos; 
			+RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))),2) + &apos;/&apos; + &apos;1&apos;+&apos;/&apos;+Reference__c,
IF(RecordType.DeveloperName =&apos;Team_Science_Grants_TSG&apos;,&apos;IA&apos; + &apos;/&apos; + &apos;TSG&apos; + &apos;/&apos; 
			+RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))),2)+ &apos;/&apos; + &apos;1&apos; + &apos;/&apos; +Reference__c,&apos;0&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Number</label>
    <type>Text</type>
</CustomField>