force-app/main/default/objects/Grants__c/fields/Research_involving_human_participation__c.field-meta.xml
<CustomField>
    <fullName>Research_involving_human_participation__c</fullName>
    <label>Research involving human participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>