force-app/main/default/objects/Grants__c/fields/Research_management_plan__c.field-meta.xml
<CustomField>
    <fullName>Research_management_plan__c</fullName>
    <label>Research management plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>