force-app/main/default/objects/Grants__c/fields/Research_summary__c.field-meta.xml
<CustomField>
    <fullName>Research_summary__c</fullName>
    <label>Research summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>